# dynare-irf-plotter

./: README.md  app.py  documentation.py  dynare_irf_utils.py  main.py  pyproject.toml  result.mat  sample.mat  text.py
.devcontainer/: devcontainer.json
pages/: README.py
