[project]
name = "python-dynare"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.1",
    "matplotlib-fontja>=1.1.0",
    "pandas>=2.2.3",
    "pyyaml>=6.0.2",
    "ruff>=0.11.9",
    "scipy>=1.15.2",
    "streamlit>=1.45.0",
]
